move api routes to /api/

--- a/web/pages/login.html
+++ b/web/pages/login.html
@@ -1,5 +1,5 @@
 <Page title="Log In">
-  <Form action="/login" redirect="/project" title="Log in">
+  <Form action="/api/login" redirect="/project" title="Log in">
     <FormField id="username" minlength="4" maxlength="32">
     <FormField id="password" type="password" minlength="8" max_length="256">
   </Form text="Don't have an account? <a href='/register'>Register</a>.">
