--- a/web/pages/new_project.html
+++ b/web/pages/new_project.html
@@ -1,5 +1,5 @@
 <Page title="New Project">
-  <Form id="project_form" action="/project/new">
+  <Form id="project_form" action="/api/project/new">
     <FormField id="project_title" name="Title" autocomplete="off">
   </Form callback="submit_project_form();">
   <script>
