--- a/web/pages/register.html
+++ b/web/pages/register.html
@@ -1,5 +1,5 @@
 <Page title="Register">
-  <Form action="/register" redirect="/login" title="Register">
+  <Form action="/api/register" redirect="/login" title="Register">
     <FormField
       id="username"
       minlength="4"
