edit project page

--- a/web/pages/edit_project.html
+++ b/web/pages/edit_project.html
@@ -2,6 +2,11 @@
   <BootstrapJs />
   <Js src="projects/projects.js" />
   <script>
-
+    let project_key = window.location.pathname.match(/([\dA-Z]+)\/?/)[1];
+    fetch('/api/project/' + project_key).then(
+      resp => resp.json().then(resp => {
+        document.body.appendChild(record_to_element(resp));
+      })
+    );
   </script>
 </Page>
