use default media dimensions hwen adding to scene

--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -33,6 +33,7 @@
         {{ scene/menu/menu.html }}
         {{ confirmation_modal.html }}
         {{ media/offcanvas.html }}
+        <MediaModal>
         {{ scene/game/game_offcanvas.html }}
         {{ scene/project/project_offcanvas.html }}
         {{ bootstrap_js.html }}
