add new landing page, test session for loggedin pages

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -1,4 +1,4 @@
-<PageFloat>
+<PageFloat redirect="/landing">
   <h1>{{ constant(APP_TITLE) }}</h1>
   <p>
     Welcome to <b>{{ constant(APP_TITLE) }}</b>!
