--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -25,12 +25,14 @@
             top: {{ constant(HOVER_ELEM_INSET) }};
           "
         >
+          {{ offcanvas_button(target=help) }}
           {{ offcanvas_button(target=media) }}
           {{ offcanvas_button(target=game) }}
           {{ offcanvas_button(target=project) }}
         </div>
         {{ scene/menu/menu.html }}
         {{ confirmation_modal.html }}
+        {{ scene/help_offcanvas.html }}
         {{ media/offcanvas.html }}
         <MediaModal>
         {{ scene/game/game_offcanvas.html }}
