more robust player layers

--- a/web/pages/landing.html
+++ b/web/pages/landing.html
@@ -1,7 +1,13 @@
 <Page title="Welcome" loggedin="">
   <div
-    class="container d-flex flex-column justify-content-end align-items-center"
-    style="height: 30vh;"
+    class="
+      container
+      d-flex
+      flex-column
+      justify-content-center
+      align-items-center
+      pt-4
+    "
   >
     <div class="col-sm-3 ">
       <div class="text-center">
