rework save workflow (auto save, ctrl+s)

--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -31,6 +31,15 @@
       {{ offcanvas_button(target=game) }}
       {{ offcanvas_button(target=project) }}
     </div>
+    <div 
+      class="spinner-border position-absolute"
+      id="canvas_loading_icon"
+      style = "
+        display: none;
+        right: {{ constant(HOVER_ELEM_INSET) }};
+        top: {{ constant(HOVER_ELEM_INSET) }};
+      "
+    ></div>
     {{ scene/menu/menu.html }}
     {{ confirmation_modal.html }}
     {{ scene/help_offcanvas.html }}
