--- a/web/pages/new_project.html
+++ b/web/pages/new_project.html
@@ -8,7 +8,7 @@
       post_form_json(FORM_ID, resp => {
         // resp is a struct NewProjectResponse
         if (resp.success) {
-          window.location.href = "/project/" + resp.project_key;
+          window.location.href = resp.url;
         }
       });
     }
